<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    >


    <EditText
        android:id="@+id/userEnteredEmail"

        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_above="@+id/userEnteredPassword"
        android:layout_alignParentStart="true"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black" />


    <EditText
        android:id="@+id/userEnteredPassword"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/studentClickSignIn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="68dp"
        android:drawableLeft="@drawable/ic_action_lock"
        android:hint="password"
        android:inputType="textPassword"
        android:textColor="@android:color/black" />


    <Button
        android:id="@+id/studentClickSignIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/professorClickSignIn"
        android:layout_alignBottom="@+id/professorClickSignIn"
        android:layout_alignParentStart="true"
        android:onClick="userLoginBtn"
        android:text="Student Sign In" />

    <Button
        android:id="@+id/professorClickSignIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_above="@+id/signup"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="46dp"
        android:onClick="userLoginBtn"
        android:text="Professor Sign In" />


    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="Register Here" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/userEnteredEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        app:srcCompat="@drawable/p" />


</RelativeLayout>
