<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yiweizhang.csci3130project.CourseAddActivity">

    <Button
        android:id="@+id/Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="Please add info for your course"
        android:textColor="@android:color/black"
        android:textSize="50px"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView13">

        <EditText
            android:id="@+id/CourseID"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Capacity"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Capacity"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Location"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/Location"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/endtime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/Location"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/Date"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/endtime"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/CourseID"
            android:layout_alignBottom="@+id/CourseID"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@+id/CourseID"
            android:text="Course ID"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Capacity"
            android:layout_alignBottom="@+id/Capacity"
            android:layout_alignEnd="@+id/textView"
            android:text="Capacity"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_centerVertical="true"
            android:text="Location"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/endtime"
            android:layout_alignBottom="@+id/endtime"
            android:layout_alignEnd="@+id/textView3"
            android:text="Time"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Date"
            android:layout_alignBottom="@+id/Date"
            android:layout_alignEnd="@+id/textView4"
            android:text="Date"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/starttime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Location"
            android:layout_toEndOf="@+id/textView"
            android:ems="10"
            android:inputType="time" />

    </RelativeLayout>

</RelativeLayout>
